[package]
name = "leader_election_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
clap = { version = "4.5.4", features = ["derive"] }
bincode = "1.3.3"
serde = { version = "1.0.197", features = ["derive"] }
futures = "0.3.30"
console-subscriber = "0.3.0"


[build]
rustflags = ["--cfg", "tokio_unstable"]